# poetry-workspace-example

./: .flake8  .gitignore  .prettierignore  .yamllint.yaml  README.md  cog.toml  pyproject.toml
example/: __init__.py
example-api/: README.md  pyproject.toml
example-api/example_api/: __init__.py  __main__.py  core.py  endpoints.py
example-api/tests/: __init__.py  conftest.py
example-common/: README.md  pyproject.toml
example-common/example_common/: __init__.py  utils.py
example-common/tests/: __init__.py  conftest.py
example-jobs/: README.md  pyproject.toml
example-jobs/example_jobs/: __init__.py
example-jobs/tests/: __init__.py  conftest.py
example-models/: README.md  pyproject.toml
example-models/example_models/: __init__.py  item.py
example-models/tests/: __init__.py  conftest.py
tests/: __init__.py  conftest.py
