[tool.poetry]

name = "example"
version = "0.1.0"
description = ""
authors = ["Mark S. <the@wondersmith.dev>"]
readme = "README.md"

packages = [
    {include = "example"}
]

[tool.poetry.scripts]

api = "example_api.__main__:serve_api"


[tool.poetry.extras]

api = ["example_api"]
jobs = ["example_jobs"]
common = ["example_common"]
models = ["example_models"]
workspace = [
    "example_api",
    "example_jobs",
    "example_common",
    "example_models",
]


[tool.poetry.dependencies]

python = "~3.11"
example_api = { path = "example-api/", develop = true, optional = true }
example_jobs = { path = "example-jobs/", develop = true, optional = true }
example_common = { path = "example-common/", develop = true, optional = true }
example_models = { path = "example-models/", develop = true, optional = true }


[tool.poetry.group.dev.dependencies]
# Formatting & Linting
black = "^23.3"
codespell = "^2.2"
docformatter = "^1.7"
flake8 = "^6.0"
flake8-bugbear = "^23.6"
flake8-docstrings = "^1.7"
isort = { version = "^5.12", extras = [ "colors" ] }
mypy = "^1.4"
perflint = "^0.7"
pre-commit = "^3.3"
pre-commit-hooks = "^4.4"
pydocstyle = "^6.3"
pylint = "^2.17"
pylint-pydantic = "^0.1"
sqlalchemy2-stubs = "*"
sqlfluff = "^1.4"
"sqlean.py" = { version = "*", markers = "platform_machine != 'aarch64'" }
types-orjson = "*"
types-sqlalchemy-utils = "^1"
yamllint = "^1.32"

# Testing
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-describe = "^2.1"
pytest-expecter = "^3.0"
pytest-flakefinder = "^1.1"
pytest-order = "^1.1"
pytest-rerunfailures = "^11.1"

# Reports & Logging
coverage = { version = "^7.2", extras = ["toml"] }

[tool.poetry.group.utilities.dependencies]
bpython = "*"
devtools = "*"

[tool.poetry.group.profiling.dependencies]
functiontrace = "*"
yappi = "*"

[tool.poetry.group.load-testing.dependencies]
locust = "*"


[tool.pytest.ini_options]
minversion = "7.4"
addopts = '''
--order-scope=session
--disable-pytest-warnings
--strict-markers
--cov
--cov-config=pyproject.toml
--cov-report xml:coverage.xml
--no-cov-on-fail
--junitxml=junit.xml
-r
fEsxp
-p
no:ddtrace
-p
no:ddtrace.pytest_bdd
'''
cache_dir = "./.cache"
testpaths = [
    "tests",
]
markers = [
    "descriptor",
    "description",
    "describe_nested",
]
python_classes = [
    "Test*",
    "Describe*",
]
python_functions = [
    "test_*",
    "when_*",
    "describe_*",
]

[tool.coverage.report]
fail_under = 50
show_missing = true

[tool.coverage.run]
branch = true
concurrency = []
include = [
    "example/*",
    "example-api/example_api/*",
    "example-jobs/example_jobs/*",
    "example-common/example_common/*",
    "example-models/example_models/*",
]
omit = ["**/tests/*", "scratch*.py"]
relative_files = true

[tool.black]
color = true
safe = true
line-length = 120
target-version = ["py311"]
skip-string-normalization = false

[tool.codespell]
builtin = "clear,rare,code"
ignore-words-list = """
cmo,deque,falsy,iif,nd,pullrequest,selectin,thar,truthy,mis,coo,froms\
"""
interactive = 0
quiet-level = 3
skip = """
CHANGELOG.md,\
*.csv,*.db,*.json,*.lock,*.png,*.svg,*.xml,*.yaml,\
.cache,.git,.hypothesis,.idea,.run,.venv,.vscode,\
requirements.txt,requirements-dev.txt,\
__pycache__\
"""

[tool.isort]
profile = "black"
atomic = true
py_version = 311
verbose = false
remove_redundant_aliases = true
ensure_newline_before_comments = true
color_output = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
use_parentheses = true
line_length = 120
combine_as_imports = true
honor_noqa = true
skip_gitignore = true
default_section = "THIRDPARTY"
known_ta_pkgs = ["tabi"]
known_first_party = [
    "tests",
    "example_api",
    "example_jobs",
    "example_common",
    "example_models",
]
import_heading_future = "Future Imports"
import_heading_stdlib = "Standard Library Imports"
import_heading_thirdparty = "Third-Party Imports"
import_heading_ta_pkgs = "Internal T.A. Package Imports"
import_heading_firstparty = "Package-Level Imports"
import_heading_localfolder = "Imports From Package Sub-Modules"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "TA_PKGS", "FIRSTPARTY", "LOCALFOLDER"]
src_paths = [
    "tests",
    "example",
    "example-api/tests",
    "example-jobs/tests",
    "example-models/tests",
    "example-common/tests",
    "example-api/example_api",
    "example-jobs/example_jobs",
    "example-common/example_common",
    "example-models/example_models",
]

[tool.pylint.main]
jobs = 0
persistent = false
load-plugins = "pylint_pydantic"
py-version = "3.11"

[tool.pylint.format]
max-module-lines = 3000

[tool.pylint."messages control"]
disable = [
    # Message Categories
    "C",  # convention checks
    "R",  # refactoring checks
    "W",  # various warnings
    # Handled by pre-commit-hooks
    "trailing-whitespace",
    "missing-final-newline",
    # Handled by flake8
    "line-too-long",
    "unused-import",
    "unused-variable",
    "too-many-branches",
    "undefined-variable",
    # Handled by isort
    "wrong-import-order",
    # Specific Messages
    "no-member",
    "bare-except",
    "file-ignored",
    "invalid-name",
    "bad-super-call",
    "locally-disabled",
    "bad-inline-option",
    "deprecated-pragma",
    "no-name-in-module",
    "raw-checker-failed",
    "suppressed-message",
    "useless-suppression",
    "c-extension-no-member",
    "use-symbolic-message-instead",
]

[tool.pylint.reports]
score = false

[tool.mypy]
cache_dir = ".cache/mypy/"
check_untyped_defs = true
error_summary = true
exclude = "/tests/"
ignore_errors = true
ignore_missing_imports = true
install_types = false
follow_imports = "silent"
strict = false
pretty = true
python_version = 3.11
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_none_errors = false
strict_optional = false

[tool.sqlfluff.core]
dialect = "mysql"
exclude_rules = "L022,L031"
ignore = "parsing"
sql_file_exts = ".sql,.sql.j2,.dml,.ddl"

[tool.sqlfluff.indentation]
indented_joins = false
indented_ctes = false
indented_using_on = true
template_blocks_indent = true

[tool.sqlfluff.rules]
tab_space_size = 4
max_line_length = 120
indent_unit = "space"
comma_style = "trailing"
allow_scalar = true
single_table_references = "unqualified"
unquoted_identifiers_policy = "all"

[tool.sqlfluff.rules.L010]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.L028]
single_table_references = "unqualified"

[tool.sqlfluff.rules.L029]
unquoted_identifiers_policy = "all"
quoted_identifiers_policy = "none"

[tool.sqlfluff.rules.L030]
extended_capitalisation_policy = "upper"

[tool.sqlfluff.rules.L040]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.L042]
forbid_subquery_in = "both"

[tool.sqlfluff.rules.L051]
fully_qualify_join_types = "both"

[tool.sqlfluff.rules.L063]
extended_capitalisation_policy = "upper"

[tool.sqlfluff.rules.L064]
preferred_quoted_literal_style = "single_quotes"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
