[tool.poetry]

name = "example-models"
version = "0.1.0"
description = ""
authors = ["Mark S. <the@wondersmith.dev>"]
readme = "README.md"

packages = [
    {include = "example_models"}
]

[tool.poetry.dependencies]

python = "~3.11"
pydantic = "^2.4"
typing-extensions = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
